# pylibobs

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
examples/: diagnose.py  pylibobs_studio.py  record_to_file.py  stream_to_rtmp.py
pylibobs/: __init__.py  _declarations.py  _declarations_auto.py  _ffi.py  _lib.py  audio_mixer.py  callbacks.py  context.py  data.py  display.py  encoder.py  enumeration.py  filters.py  hotkeys.py  output.py  persistence.py  properties.py  remux.py  resampler.py  scene.py  service.py  source.py  transitions.py
scripts/: fetch_libs.py  generate_cdef.py  run_tests.py
tests/integration/: test_audio_mixer.py  test_callbacks.py  test_data_extras.py  test_display.py  test_encoder_roi.py  test_enumeration.py  test_filters.py  test_harness_workflow.py  test_hotkeys.py  test_init.py  test_output_extras.py  test_persistence.py  test_properties.py  test_property_accessors.py  test_remux.py  test_resampler.py  test_service.py  test_source_extras.py  test_transforms.py  test_transitions.py  test_video_extras.py
tests/unit/: test_context.py  test_data.py  test_lib_loader.py  test_struct_layout.py
